<resources>
    <string name="app_name">StoryAppSubmission</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="LessThenEight">Password Harus Lebih Dari 8 Karakter</string>
    <string name="NotValidEmail">Email Yang Dimasukkan Tidak Valid !</string>
    <string name="Login">Login</string>
    <string name="enter_name">Masukkan Nama Anda</string>
    <string name="no_account">Belum Punya Akun? Daftar Sekarang!</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="check_name">Periksa Ulang Nama yang Dimasukkan</string>
    <string name="check_email">Periksa Ulang Email yang Dimasukkan</string>
    <string name="check_password">Periksa Ulang Password yang Dimasukkan</string>
    <string name="loading">Loading…</string>
    <string name="register_berhasil">Berhasil Daftar, Kembali Ke Halaman Login…</string>
    <string name="story_image">Story Image</string>
    <string name="story_title">Story Title</string>
    <string name="created_example">createdAt</string>
    <string name="something_wrong">Terjadi Kesalahan, Silahkan Cek Koneksi Internet Anda</string>
    <string name="label_nama">Nama User</string>
    <string name="created_At">Dibuat Pada Tanggal</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="take_camera">Kamera</string>
    <string name="upload">Unggah</string>
    <string name="gallery">Gallery</string>
    <string name="enter_description">Masukkan Deskripsi Cerita</string>
    <string name="add_story">Add Story</string>
    <string name="revoked_permission">Tidak Mendapatkan Permission</string>
    <string name="logout">LogOut</string>
    <string name="welcome">Selamat Datang</string>
    <string name="login_welcome">Untuk Menggunakan Aplikasi Ini Silahkan Login Terlebih Dahulu</string>
    <string name="welcome_register">Silahkan Isi Data Pada Kolom Dibawah Ini</string>
    <string name="register">Register</string>
    <string name="dicoding_logo">Dicoding Logo</string>
    <string name="empty_image">Silahkan Masukkan Berkas Gambar Terlebih Dahulu!</string>
    <string name="empty_description">Silahkan Masukkan Deskripsi Terlebih Dahulu</string>
    <string name="click_toCapture">Klik Untuk Mengambil Gambar</string>
    <string name="click_toChangeCamera">Klik Untuk Mengubah Kamera</string>
    <string name="captured_image">Gambar yang anda tangkap muncul disini</string>
    <string name="detailed_storyImage">Gambar Cerita</string>
</resources>