<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.RegisterFragment">

    <ImageView
        android:id="@+id/main_Image"
        android:layout_width="0dp"
        android:alpha="0"
        android:layout_height="60dp"
        android:src="@drawable/image_dicoding"
        android:layout_marginTop="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/dicoding_logo" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:id="@+id/registerlabel"
        android:text="@string/welcome_register"
        android:textSize="18sp"
        android:alpha="0"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_Image"/>

    <EditText
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:textSize="20sp"
        android:alpha="0"
        android:hint="@string/enter_name"
        android:id="@+id/myName"
        android:background="@drawable/shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerlabel"
        android:autofillHints="name" />

    <com.example.storyappsubmission.customView.MyEmail
        android:inputType="text"
        android:id="@+id/myRegisterEmail"
        android:autofillHints="emailAddress"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:alpha="0"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/myName"
        />

    <com.example.storyappsubmission.customView.MyPassword
        android:layout_width="match_parent"
        android:id="@+id/myRegisterPassword"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:autofillHints="password"
        android:background="@drawable/shape"
        android:layout_marginEnd="16dp"
        android:inputType="textPassword"
        android:layout_height="48dp"
        android:alpha="0"
        android:layout_below="@id/myRegisterEmail"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/myRegisterEmail"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/registerButton"
        android:alpha="0"
        android:textSize="20sp"
        android:text="@string/register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/myRegisterPassword"/>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>